Optimize book search logic; change logging levels; update Grafana dashboard and screenshot